@@ -13,14 +13,12 @@ Installation from RPM
 * Install the php-java-bridge, for example with the command:
   rpm -i php-java-bridge-X.Y.Z-1.i386.rpm
 
-* IF you have SECURITY ENHANCED LINUX, install the SEL policy sources
-  if they are not installed. For example with the command:
-  rpm -i selinux-policy-targeted-sources-1.17.30-2.19.noarch.rpm
-  Then update the policy with the command:
-  su -c "sh update_policy.sh /etc/selinux/{strict||targeted}/src/policy reload"
-  The value for "strict||targeted" depends on your setting in
-  /etc/selinux/config. The "update_policy.sh" file can be found in the 
-  documentation folder of the bridge: /usr/share/doc/php-java-bridge*.
+* If you have SECURITY ENHANCED LINUX, the above command should have
+  provided instructions how to install the php-java-bridge.te and
+  php-java-bridge.fc policy files. If you encounter problems, for
+  example if the default policy is too restrictive, please report them
+  to php-java-bridge-users@lists.sourceforge.net and include the
+  relevant audit log: "dmesg | fgrep avc:".
 
 Start the web-server with the command: service httpd restart.
 Start the bridge with the command: service php-java-bridge restart
@@ -72,13 +70,18 @@ Then choose a proper INST directory and type the following commands:
 # adjust install directory
 INST=/usr/local
 
+# adjust apache MPM.  Prefork is standard behaviour in apache 1.3, worker
+# creates worker thread pools which deliver content much faster.  But note:
+# some third-party PHP modules may not be thread-safe.
+MPM=prefork #MPM=worker
+
 # stop the system http service 
 su - -c "service httpd stop"
 
 # compile and install apache 2
 gunzip < httpd-2.x.y.tar.gz | tar xf -
 cd httpd-2.x.y
-./configure  --enable-module=so --prefix=$INST
+./configure --with-mpm=$MPM --enable-module=so --prefix=$INST
 make && su -c "make install"
 cd ..
 
