@@ -1,3 +1,9 @@
+2005-02-04  Jost Boekemeier  <jostb@intern>
+
+	INSTALL: document worker MPM
+
+	client.c, java.c: ZTS
+
 2005-02-03  Jost Boekemeier  <jostb@intern>
 
 	* server/JavaBridge.java (load, findClass): Store reason for
